April tag detection working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,6 +166,7 @@ catkin_install_python(PROGRAMS
   src/april_tag_tracker.py
   src/navigation_node.py
   src/SLAM_node.py
+  src/go_forward.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
